<resources>
    <string name="app_name">calculьator</string>
    <string name="__0">0</string>
    <string name="equals">=</string>
    <string name="delete">delete</string>
    <string name="_0">0</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="__4">4</string>
    <string name="__5">5</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="division">/</string>
    <string name="clear">clear</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
</resources>