<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:onClick="clearClick"
            android:layout_weight="1"
            android:background="#61D366"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="#616161"
            android:textSize="22sp">

        </TextView>

        <TextView
            android:id="@+id/devision"
            android:layout_width="wrap_content"
            android:onClick="operationClick"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#61D366"
            android:gravity="center"
            android:text="@string/division"
            android:textColor="#616161"
            android:textSize="22sp">

        </TextView>


    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="4">


            <TextView
                android:id="@+id/seven"
                android:onClick="numberClick"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/eight"
                android:onClick="numberClick"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:onClick="numberClick"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#61D366"
                android:onClick="operationClick"
                android:gravity="center"
                android:text="@string/multiply"
                android:textColor="#616161"
                android:textSize="30sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="numberClick"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/five"
                android:onClick="numberClick"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#61D366"
                android:onClick="operationClick"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="#616161"
                android:textSize="30sp" />

        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="numberClick"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#61D366"
                android:onClick="operationClick"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="#616161"
                android:textSize="30sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="numberClick"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="deleteClick"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:onClick="equalsClick"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#298A2D"
                android:gravity="center"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#FAF6F6"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>